# deta-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  env.sample  pyproject.toml  requirements.txt  setup.py  tests.py
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/workflows/: pull_request.yml  release.yml  tag_release.yml  test_release.yml
deta/: __init__.py  _version.py  base.py  drive.py  service.py  utils.py
deta/_async/: client.py
scripts/: _check_version  build  install  install.sh  publish  publish.sh  release  tag  test_publish  test_publish.sh
tests/: test_async.py  test_sync.py
