[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool]
[tool.black]
line-length = 120
target-version = ["py39"]

[tool.mypy]
pretty = true
python_version = "3.9"
show_error_codes = true
# strict = true

[tool.poetry]
authors = ["Deta <hello@deta.sh>"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]
description = "Python SDK for Deta Base & Deta Drive."
keywords = ["deta", "deta-base", "deta-drive"]
name = "deta"
packages = [
  {include = "deta"},
  {include = "deta/_async"},
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/deta/deta-python"
version = "1.1.0"

[tool.poetry.dependencies]
python = ">=3.8,<4"

[tool.poetry.group.async.dependencies]
aiohttp = "^3.8.4"

[tool.poetry.group.dev.dependencies]
mypy = ">=0.991,<1.2"
pre-commit = "^2.20.0"
pytest = "^7.2.2"
python-dotenv = "^1.0.0"
pytest-asyncio = "^0.21.0"
